--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-tensorflow": "^0.1.7"
   },
   "devDependencies": {
     "babel-jest": "22.4.4",
